tests/base/invalid/Switch_CompileFail_5.whiley


int f(int x):
    if x > 0:
        break
    return 0
